; ModuleID = '/home/carl/AnghaBench/reactos/base/services/schedsvc/extr_schedsvc.c_UpdateServiceStatus.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/schedsvc/extr_schedsvc.c_UpdateServiceStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i64, i64, i64, i64, i32 }

@SERVICE_WIN32_OWN_PROCESS = common dso_local global i32 0, align 4
@ServiceStatus = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@SERVICE_PAUSED = common dso_local global i64 0, align 8
@SERVICE_RUNNING = common dso_local global i64 0, align 8
@SERVICE_ACCEPT_STOP = common dso_local global i32 0, align 4
@SERVICE_ACCEPT_SHUTDOWN = common dso_local global i32 0, align 4
@SERVICE_ACCEPT_PAUSE_CONTINUE = common dso_local global i32 0, align 4
@SERVICE_START_PENDING = common dso_local global i64 0, align 8
@SERVICE_STOP_PENDING = common dso_local global i64 0, align 8
@SERVICE_PAUSE_PENDING = common dso_local global i64 0, align 8
@SERVICE_CONTINUE_PENDING = common dso_local global i64 0, align 8
@ServiceStatusHandle = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @UpdateServiceStatus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UpdateServiceStatus(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i32, i32* @SERVICE_WIN32_OWN_PROCESS, align 4
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 6), align 8
  %5 = load i64, i64* %3, align 8
  store i64 %5, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 5), align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @SERVICE_PAUSED, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @SERVICE_RUNNING, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %19

13:                                               ; preds = %9, %1
  %14 = load i32, i32* @SERVICE_ACCEPT_STOP, align 4
  %15 = load i32, i32* @SERVICE_ACCEPT_SHUTDOWN, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @SERVICE_ACCEPT_PAUSE_CONTINUE, align 4
  %18 = or i32 %16, %17
  store i32 %18, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 0), align 8
  br label %20

19:                                               ; preds = %9
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 0), align 8
  br label %20

20:                                               ; preds = %19, %13
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 4), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 2), align 8
  %21 = load i64, i64* %3, align 8
  %22 = load i64, i64* @SERVICE_START_PENDING, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %36, label %24

24:                                               ; preds = %20
  %25 = load i64, i64* %3, align 8
  %26 = load i64, i64* @SERVICE_STOP_PENDING, align 8
  %27 = icmp eq i64 %25, %26
  br i1 %27, label %36, label %28

28:                                               ; preds = %24
  %29 = load i64, i64* %3, align 8
  %30 = load i64, i64* @SERVICE_PAUSE_PENDING, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %36, label %32

32:                                               ; preds = %28
  %33 = load i64, i64* %3, align 8
  %34 = load i64, i64* @SERVICE_CONTINUE_PENDING, align 8
  %35 = icmp eq i64 %33, %34
  br i1 %35, label %36, label %37

36:                                               ; preds = %32, %28, %24, %20
  store i32 10000, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 4
  br label %38

37:                                               ; preds = %32
  store i32 0, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @ServiceStatus, i32 0, i32 1), align 4
  br label %38

38:                                               ; preds = %37, %36
  %39 = load i32, i32* @ServiceStatusHandle, align 4
  %40 = call i32 @SetServiceStatus(i32 %39, %struct.TYPE_3__* @ServiceStatus)
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @SetServiceStatus(i32, %struct.TYPE_3__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
